# ai-debate-coach

./: .env.example  .gitignore  README.md  TEST_DOCUMENT.md  pyproject.toml  run.py
app/: __init__.py  config.py
app/clients/: llm_client.py
app/controllers/: debate_controller.py
app/models/: session.py
app/repositories/: session_repository.py
app/schemas/: debate.py
app/services/: debate_service.py  evaluation_service.py  session_service.py
app/utils/: prompt_builder.py
examples/frontend/: api.js
frontend/: README.md  app.js  index.html  styles.css
migrations/versions/: 20260513_0002_add_session_model_name.py
tests/: conftest.py  test_acceptance_flow.py  test_api_endpoints.py  test_config.py  test_debate_service_extra.py  test_edge_cases.py  test_errors.py  test_evaluate_api.py  test_evaluation_parser.py  test_evaluation_result.py  test_evaluation_service_extra.py  test_frontend_contract.py  test_llm_client.py  test_llm_client_extra.py  test_performance_baseline.py  test_prompt_builder.py  test_real_api.py  test_schemas.py  test_session_service.py  test_start_api.py  test_stream_api.py
