[project]
name = "ai-debate-coach-backend"
version = "0.1.0"
description = "Backend MVP for 论点攻防——AI 辩论教练"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0,<4.0",
    "Flask-SQLAlchemy>=3.1,<4.0",
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "requests>=2.32,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=6.0,<7.0",
    "python-pptx>=1.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider -m \"not real_api\""
markers = [
    "real_api: tests that make real API calls to OpenRouter (requires valid LLM_API_KEY)",
    "performance: lightweight local performance baselines without external services",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]

[tool.uv]
package = false
